--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "heroku local:start",
     "super": "supervisor ./bin/www",
     "start_old": "node ./bin/www",
-    "migrate_local": "sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
-    "seed_local": "sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
+    "migrate_local": "sequelize db:migrate --url sqlite://%cd%/quiz.sqlite",
+    "seed_local": "sequelize db:seed:all --url sqlite://%cd%/quiz.sqlite",
     "open_heroku": "heroku open",
     "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
     "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL",
@@ -27,12 +27,13 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-flash": "0.0.2",
+    "express-generator": "^4.16.0",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "morgan": "~1.9.0",
     "pg": "7.4.0",
-    "sequelize": "^4.37.5",
+    "sequelize": "^4.37.9",
     "sequelize-cli": "^4.0.0",
     "serve-favicon": "~2.4.5",
     "supervisor": "^0.12.0"
